--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi I'm a project manager wanting to hone his technical skills for a new job path.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Aurora, Colorado.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are working out at the gym and playing video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>MY dream job is to work at Google as a Full-Stack Developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Aurora, Colorado.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to learn technical skills that'll help me find a new job path.</p>
     </section>
 
     <footer id="footer">
